<resources>
	<string name="app_name">友寻</string>
	<string name="menu_item_refresh">刷新</string>
	<string name="profile_sex_prompt">性别</string>
	<string name="profile_education_prompt">学历</string>
	<string name="profile_marriage_prompt">婚史</string>
	<string name="me">我</string>
	<string name="find">发现</string>
	<string name="message">消息</string>
	<string name="news">熟人圈</string>
	<string name="my_pic">我的相册</string>
	<string name="setting">设置</string>
	<string name="go_back">返回</string>
	<string name="upload_avatar">上传头像</string>
	<string name="choose_sex">请选择性别</string>
	<string name="choose_city">请选择所在城市</string>
	<string name="choose_height">请选择身高</string>
	<string name="choose_weight">请选择体重</string>
	<string name="choose_career">请选择职业</string>
	<string name="choose_birthday">请选择出生年月日</string>
	<string name="loading">加载中...</string>
	<string name="notwrite">未填写</string>
	<string name="service_title">服务</string>
	<string name="upload_photo_format_incorrect">图片格式不正确</string>
	<string name="avatar_be_reviewing">审核中</string>
	<string name="sdcard_is_not_exit">sd卡不存在</string>
	<string name="get_photo_failed">照片获取失败</string>
	<string name="sms_pay_operator_china_mobile">中国移动</string>
	<string name="sms_pay_operator_china_unicom">China Unicom</string>
	<string name="sms_pay_operator_china_unicom2">中国联通</string>
	<string name="sms_pay_operator_china_telecom">中国电信</string>
	<string name="sms_pay_label_china_mobile">中国移动</string>
	<string name="sms_pay_label_unicom">中国联通</string>
	<string name="sms_pay_label_telecom">中国电信</string>
	<string name="home_tab_text_0">缘分</string>
	<string name="home_tab_text_1">消息</string>
	<string name="home_tab_text_2">搜索</string>
	<string name="home_tab_text_3">广场</string>
	<string name="home_tab_text_4">更多</string>
	<string name="home_tab_text_5">发现</string>
	<string name="home_tab_text_6">联系人</string>
	<string name="home_text_0">熟人交友严肃交友</string>
	<string name="home_login">登录</string>
	<string name="home_register">注册</string>
	<string name="login_text_account">输入注册邮箱/手机号</string>
	<string name="login_text_password">输入密码</string>
	<string name="login_text_savePassword_checkbox">记住密码</string>
	<string name="login_text_forgot_password">找回密码</string>
	<string name="login_text_autoLogin_checkbox">自动登录</string>
	<string name="login_text_login">登录</string>
	<string name="login_text_loading">登录中</string>
	<string name="login_text_register">注册账号</string>
	<string name="login_text_edittext_check">用户名，密码 不能为空</string>
	<string name="login_text_email_invalid">用户名不合法</string>
	<string name="login_error">登录失败</string>
	<string name="find_pwd_by_email_text">我们会向您的邮箱发送一封重置密码链接，您可以通过链接重置密码</string>
	<string name="find_pwd_by_email_text_1">请输入您注册时的邮箱</string>
	<string name="find_pwd_by_email_text_2">邮箱找回</string>
	<string name="find_pwd_by_phone_text_1">手机号找回</string>
	<string name="find_pwd_text_1">重置链接已发送，请登录邮箱查看</string>
	<string name="find_pwd_text_2">邮箱未注册</string>
	<string name="find_pwd_text_3">手机号未注册</string>
	<string name="find_pwd_text_4">发送失败</string>
	<string name="titl_new_pass">请输入新密码</string>
	<string name="titl_new_pass_repeat">重复新密码</string>
	<string name="titl_new_pass_noblank">新密码不能为空</string>
	<string name="titl_new_pass_repeat_noblank">重复新密码不能为空</string>
	<string name="titl_new_pass_not_same">两次密码输入不一致</string>
	<string name="titl_new_pass_length_error">密码长度范围在6到20位</string>
	<string name="titl_yzm_send_three">获取验证码失败，发送信息超过三次</string>
	<string name="titl_edit_pass_suss">修改密码成功</string>
	<string name="titl_edit_pass_fail">修改密码失败</string>
	<string name="illegal_validate_type">注册类型错误！请重新选择找回方式。</string>
	<string name="mail_parameter_error">邮箱参数错误。</string>
	<string name="mobile_parameter_error">手机号参数错误。</string>
	<string name="invalid_parameters">缺少参数，或参数格式不正确</string>
	<string name="valicode_is_getting">正在获取</string>
	<string name="register_text_hint_email">请输入邮箱号</string>
	<string name="register_text_hint_mobile">手机号</string>
	<string name="register_text_password">密码（不能少于6位）</string>
	<string name="register_text_nickname">昵称:不可修改</string>
	<string name="register_botton_text_back">返回首页</string>
	<string name="register_text_submit">提交</string>
	<string name="register_text_submiting">提交中</string>
	<string name="register_text_edittext_check">用户名，密码不能为空</string>
	<string name="register_text_edittext_limit">邮箱长度应为7-30</string>
	<string name="register_text_nickname_blank">昵称不能为空</string>
	<string name="register_text_email_invalid">请输入正确的邮箱地址</string>
	<string name="register_text_phone_invalid">请输入正确的手机号</string>
	<string name="register_text_nickname_invalid">昵称过长，如用中文，需少于10字</string>
	<string name="register_text_register_error">注册失败</string>
	<string name="register_text_register_error__20">用户账号 昵称 密码 性别 验证失败</string>
	<string name="register_text_register_error__21">生日 验证失败,请确保您满足十八周岁</string>
	<string name="register_text_register_error__22">婚姻状况 验证失败</string>
	<string name="register_text_register_error__23">学历 验证失败</string>
	<string name="register_text_register_error__24">收入 验证失败</string>
	<string name="register_text_register_error__25">工作地区 验证失败</string>
	<string name="register_text_register_error__26">请填写内心独白之后再提交</string>
	<string name="register_text_register_error__27">注册条例 验证失败</string>
	<string name="register_text_register_error__28">注册验证失败</string>
	<string name="register_text_register_error__29">账号已经存在，直接登录或以其他方式注册。</string>
	<string name="register_text_register_error__31">手机验证码错误</string>
	<string name="register_text_register_error__30">注册失败</string>
	<string name="register_text_register_error_note">请</string>
	<string name="register_text_password_comfirm">确认密码</string>
	<string name="register_valid_code_warning">注：1.手机注册未收到验证码，请检查是否被拦截</string>
	<string name="register_text_agreement">\u0020\u0020\u0020\u0020\u0020\u0020\u0020 2.注册即表示您已同意</string>
	<string name="register_service_term">服务条款</string>
	<string name="license_content">\t    友寻手机客户端是免费软件，针对年满18周岁的未婚人员使用，使用该软件需要接入网络。除会员服务收取相应费用之外，我们不以任何形式售卖该软件以及软件中的会员资料。\n\t    我们在保证会员资料真实方面做了严格的审核工作，但是不排除有个别人员利用该软件做违法的事情，并由此产生欺诈行为，友寻对此不负任何责任，请自行辨别对方的资料真实性，谨慎交友。\n\t    该软件需要使用您的位置功能，请选择开启或者关闭，部分功能需要位置功能支持，如位置提醒功能。我们只利用位置功能为你匹配适合的会员，并不记录和利用您的位置做任何用户允许范围外的事情。\n\t    用户需要对自己资料真实性负责，禁止利用该软件做违法活动，禁止上传淫秽图片，禁止发布政治、反动、色情、种族歧视等内容，一经发现会立即删除，严重者终身禁用帐号并移交公安机关处理。\n\t    我们会对注册会员的资料进行严格的保密，不会以任何目的和形式出售给第三方公司或者个人。但是不排除个别公司利用互联网技术抓取友寻网站的会员基本资料，但是决不会取得会员认证的手机和身份证号码等资料，请放心注册认证。\n\t    上海花千树信息科技有限公司对该软件有唯一的修改升级权限，并有权终止一部分版本的使用。请及时更新最新版本。	</string>
	<string name="register_text_man">男</string>
	<string name="register_text_woman">女</string>
	<string name="register_text_area">地区</string>
	<string name="register_text_age">生日</string>
	<string name="register_text_height">身高</string>
	<string name="register_text_education">学历</string>
	<string name="register_text_marriage">婚史</string>
	<string name="register_text_income">收入</string>
	<string name="register_finish_register">完成注册</string>
	<string name="register_text_select_birthday">选择生日</string>
	<string name="register_text_next">下一步</string>
	<string name="register_submit">注册信息提交中...</string>
	<string name="register_text_hint_personal_note">你想对TA说：</string>
	<string name="valid_code_warning">注意：如未及时收到验证码短信，请检查是否被其他软件拦截。</string>
	<string name="send_reg_vali_failed">获取验证码失败</string>
	<string name="send_reg_vali_registered_num">账号已存在，直接登录或以其他方式注册。</string>
	<string name="send_reg_vali_num_format_error">手机号码格式错误</string>
	<string name="send_reg_validation_code_format_error">验证码格式错误</string>
	<string name="send_reg_vali_hint_validation_code">验证码</string>
	<string name="send_reg_vali_btn_active">获取验证码</string>
	<string name="query_again">重新获取</string>
	<string name="send_reg_vali_count_down">倒计时</string>
	<string name="send_reg_vali_second">秒</string>
	<string name="register_type_mobile">手机号注册</string>
	<string name="register_type_email">邮箱注册</string>
	<string name="register_next">下一步</string>
	<string name="label_hint_support_type">支持手机号和邮箱注册</string>
	<string name="label_hint_fill_in_vali_code">请输入短信获取的验证码</string>
	<string name="register_text_vali_code_hint">验证码</string>
	<string name="register_text_password_ilegal">密码必须为字母或数字，长度6~20位</string>
	<string name="register_label_1">一分钟注册，找到一辈子的幸福</string>
	<string name="register_label_2">友寻是严肃婚恋交友网站，欢迎年满18周岁、单身、旨在寻找人生伴侣的朋友注册</string>
	<string name="register_title">注册</string>
	<string name="register_label_mobile_register">手机号注册</string>
	<string name="register_label_email_register">邮箱注册</string>
	<string name="register_label_nickname">昵\u0020\u0020称</string>
	<string name="register_label_mobile">手机号</string>
	<string name="register_label_email">邮\u0020\u0020箱</string>
	<string name="register_label_mobile_validcode">验证码</string>
	<string name="register_label_password">密\u0020\u0020码</string>
	<string name="register_blank_mobile">请输入手机号</string>
	<string name="register_blank_nickname">请输入昵称</string>
	<string name="register_blank_password">请输入密码</string>
	<string name="register_blank_validcode">请输入验证码</string>
	<string name="register_blank_email">请输入邮箱号</string>
	<string name="register_tips">请谨慎填写，提交后不可修改</string>
	<string name="register_select_sex">请选择性别</string>
	<string name="register_select_area">请选择地区</string>
	<string name="ok">确认</string>
	<string name="meter">m</string>
	<string name="kilometer">km</string>
	<string name="age">岁</string>
	<string name="height">cm</string>
	<string name="below_age">岁以下</string>
	<string name="above_age">岁以上</string>
	<string name="below_height">cm以下</string>
	<string name="above_height">cm以上</string>
	<string name="to">-</string>
	<string name="distance">距离</string>
	<string name="sending">正在发送...</string>
	<string name="dialog_select_photo">选择照片</string>
	<string name="dialog_select_camera">拍照</string>
	<string name="dialog_select_gallery">来自相册</string>
	<string name="dialog_delete_photo">删除照片</string>
	<string name="dialog_delete_photo_confirm">您确认要删除这张照片吗？</string>
	<string name="dialog_btn_ok">确定</string>
	<string name="exit_confirm_cancel">取消</string>
	<string name="dialog_photo_title_1">有头像</string>
	<string name="dialog_photo_title_2">受到关注迅速提升100%</string>
	<string name="dialog_find_back_through_email">通过邮箱找回</string>
	<string name="dialog_find_back_through_photo">通过手机号找回</string>
	<string name="dialog_title_upload_photo">上传生活照</string>
	<string name="logout">注销登录</string>
	<string name="on">ON</string>
	<string name="off">OFF</string>
	<string name="setting_title">设置</string>
	<string name="setting_distance_500">500m</string>
	<string name="setting_distance_1000">1000m</string>
	<string name="setting_distance_2000">2000m</string>
	<string name="exit_confirm">你确认要退出账号吗？</string>
	<string name="exit_confirm_exit">退出</string>
	<string name="exit_confirm_clear_account">退出清除账号</string>
	<string name="close_distance_confirm">你确认关闭距离提醒吗？</string>
	<string name="location_notification_msg">关闭距离提醒，将无法看到距离较近的会员</string>
	<string name="close_share_location_confirm">你确认关闭分享距离吗？</string>
	<string name="share_location_msg">开启位置服务可以让您获得距离更精准的用户信息，关闭位置服务会导致用户距离信息不够准确。您确定要关闭分享位置吗？</string>
	<string name="setting_push">推送设置</string>
	<string name="setting_location">位置设置</string>
	<string name="iyouxun_confirm">确定</string>
	<string name="iyouxun_cancel">取消</string>
	<string name="input_phone_number">手机号</string>
	<string name="register_new_user">注册账号</string>
	<string name="forgot_password">忘记密码</string>
	<string name="login_by_other_platform_user">使用其他社交账号登录</string>
	<string name="str_weixin">微信</string>
	<string name="str_sina_weibo">新浪微博</string>
	<string name="str_qq">QQ</string>
	<string name="str_nick">昵称</string>
	<string name="str_sex">性别</string>
	<string name="str_man">男</string>
	<string name="str_woman">女</string>
	<string name="emotional_state">情感状态</string>
	<string name="please_select">请选择</string>
	<string name="password_hint">6-20位字母或数字</string>
	<string name="nick_hint">1-14位中英文</string>
	<string name="group_recommend">群组推荐</string>
	<string name="str_join">加入</string>
	<string name="scan_qr_code">扫一扫</string>
	<string name="my_qr_code">我的二维码</string>
</resources>