<?xml version="1.0" encoding="utf-8"?>
<!-- 登陆页面 -->
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:background="@color/background_global">
	<!-- 输入手机号码 -->
	<LinearLayout
		android:layout_height="44dp"
		android:layout_width="match_parent"
		android:orientation="horizontal"
		android:background="@drawable/background_top_border"
		android:layout_marginTop="34dp">
		<ImageView
			android:layout_width="18dp"
			android:layout_height="18dp"
			android:src="@drawable/mobile_icon"
			android:layout_gravity="center_vertical"
			android:layout_marginLeft="17dp"
			android:layout_marginRight="15dp"
			android:scaleType="centerInside" />
		<com.iyouxun.ui.views.ClearEditText
			android:id="@+id/login_input_phone_number"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:hint="@string/input_phone_number"
			android:inputType="phone"
			android:background="@drawable/background_top_bottom_border"
			android:textSize="14sp"
			android:paddingLeft="16dp"
			android:textColor="@color/text_normal_black"
			android:textColorHint="@color/gray_main"
			android:paddingRight="15dp"
			android:singleLine="true"
			android:maxLength="11" />
	</LinearLayout>
	<!-- 输入手机号码 -->
	<LinearLayout
		android:layout_height="44dp"
		android:layout_width="match_parent"
		android:orientation="horizontal"
		android:background="@drawable/background_bottom_border">
		<ImageView
			android:layout_width="18dp"
			android:layout_height="18dp"
			android:src="@drawable/password_icon"
			android:layout_gravity="center_vertical"
			android:layout_marginLeft="17dp"
			android:layout_marginRight="31dp"
			android:scaleType="centerInside" />
		<com.iyouxun.ui.views.ClearEditText
			android:id="@+id/login_input_password"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:hint="@string/password_hint"
			android:inputType="textPassword"
			android:background="@color/transparent"
			android:textSize="14sp"
			android:textColor="@color/text_normal_black"
			android:textColorHint="@color/gray_main"
			android:maxLength="20"
			android:digits="1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
			android:paddingRight="15dp"
			android:singleLine="true" />
	</LinearLayout>
	<!-- 登录按钮 -->
	<Button
		android:id="@+id/login_btn_login"
		android:layout_height="44dp"
		android:layout_width="match_parent"
		android:layout_marginLeft="15dp"
		android:layout_marginRight="15dp"
		android:text="@string/home_login"
		android:layout_marginTop="30dp"
		android:background="@drawable/btn_get_security_code_bg"
		android:textSize="14sp"
		android:textColor="@color/WhiteColor"
		android:enabled="false" />
	<RelativeLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:layout_marginTop="12dp"
		android:paddingLeft="15dp"
		android:paddingRight="15dp">
		<!-- 注册按钮 -->
		<TextView
			android:id="@+id/login_btn_register"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="10sp"
			android:text="@string/register_new_user"
			android:layout_alignParentLeft="true"
			android:background="@color/transparent"
			android:includeFontPadding="false"
			android:paddingTop="12dp"
			android:paddingBottom="12dp"
			android:textColor="@color/blue_main" />
		<!-- 忘记密码 -->
		<TextView
			android:id="@+id/login_btn_forgot_password"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:textSize="10sp"
			android:text="@string/forgot_password"
			android:background="@color/transparent"
			android:layout_alignParentRight="true"
			android:paddingTop="12dp"
			android:paddingBottom="12dp"
			android:textColor="@color/text_topNav_center" />
	</RelativeLayout>
	<!-- 其他平台登录 -->
	<RelativeLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal"
		android:layout_marginTop="44dp"
		android:paddingLeft="15dp"
		android:paddingRight="15dp">
		<TextView
			android:id="@+id/login_other_login_platform"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:includeFontPadding="false"
			android:layout_centerInParent="true"
			android:text="@string/login_by_other_platform_user"
			android:textSize="10sp"
			android:textColor="@color/gray_main"
			android:singleLine="true" />
		<TextView
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:background="@drawable/background_bottom_border2"
			android:layout_marginRight="15dp"
			android:layout_alignParentLeft="true"
			android:layout_toLeftOf="@id/login_other_login_platform"
			android:layout_centerVertical="true" />

		<TextView
			android:layout_height="1dp"
			android:layout_width="match_parent"
			android:background="@drawable/background_bottom_border2"
			android:layout_marginLeft="15dp"
			android:layout_alignParentRight="true"
			android:layout_toRightOf="@id/login_other_login_platform"
			android:layout_centerVertical="true" />
	</RelativeLayout>
	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal"
		android:gravity="center"
		android:layout_marginTop="30dp">
		<!-- 新浪微博登录 -->
		<Button
			android:id="@+id/login_btn_sinaweibo"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/str_sina_weibo"
			android:drawableTop="@drawable/login_icn_sinaweibo"
			android:background="@color/transparent"
			android:textSize="10sp"
			android:drawablePadding="10dp"
			android:textColor="#ff7878" />
		<!-- 微信登录 -->
		<Button
			android:id="@+id/login_btn_weixin"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/str_weixin"
			android:drawableTop="@drawable/login_icn_weichat"
			android:background="@color/transparent"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
			android:textSize="10sp"
			android:drawablePadding="10dp"
			android:textColor="#5cc750" />
		<!-- QQ登录 -->
		<Button
			android:id="@+id/login_btn_qq"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/str_qq"
			android:drawableTop="@drawable/login_icn_qq"
			android:background="@color/transparent"
			android:textSize="10sp"
			android:drawablePadding="10dp"
			android:textColor="#5da4e2" />
	</LinearLayout>
</LinearLayout>
